# AnalysisTestSuite

./: .travis.yml  CMakeLists.txt  array_out_of_bounds.cpp  assert_with_side_effects.cpp  binary_search.cpp  bit_shift_1.cpp  bit_shift_2.cpp  bit_shift_3.cpp  capture_local_by_reference.cpp  capture_local_uninitialized.cpp  capture_local_uninitialized_by_ref.cpp  confusing_indentation.cpp  duplicate_branch_1.cpp  duplicate_branch_2.cpp  get_valid_gcc_flags.sh  identical_if.cpp  invalid_loop_arguments.cpp  iterator_mismatch.cpp  loop_over_empty_container.cpp  loss_of_precision.cpp  loss_of_sign.cpp  loss_of_sign_and_precision.cpp  member_reassignment.cpp  memory_leak.cpp  move_const.cpp  null_dereference_1.cpp  null_dereference_2.cpp  null_dereference_3.cpp  null_dereference_4.cpp  null_dereference_5.cpp  output_csv.rb  reassigned_pointer.cpp  redundant_member_initialization.cpp  rule_of_zero.cpp  std_array_out_of_bounds.cpp  uber_cpp_analyzer.rb  unchecked_ptr.cpp  unchecked_ptr_2.cpp  unreachable_code.cpp  unreachable_code_2.cpp  (+2 more)
higher_level/: expensive_copies.cpp  infinite_loop.cpp  misleading_indentation.cpp  null_ptr_assign.cpp  over_bit_shifted.cpp  overdone_loop.cpp  parse.cpp  parse_past_end.cpp  parse_past_end_fuzzer.cpp  use_after_move.cpp
